<resources>

    <string name="app_name">NeoTrade</string>
    <string name="eslogan">El nuevo trading, con visión de futuro</string>
    <string name="user_icon_description">Icono de usuario</string>
    <string name="enter_username">Introduce el correo electronico</string>
    <string name="enter_password">Introduce la contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="about_link">Acerca de</string>
    <string name="register_title">Registro</string>
    <string name="enter_new_username">Introduce un nuevo nombre de usuario</string>
    <string name="enter_new_password">Introduce una nueva contraseña</string>
    <string name="confirm_register">Confirmar registro</string>
    <string name="welcome_message">¡Bienvenido!</string>
    <string name="enter_email">Introduce el correo electrónico</string>
    <string name="enter_name">Introduce el nombre</string>
    <string name="enter_surname">Introduce el apellido</string>
    <string name="enter_birth_date">Introduce la fecha de nacimiento</string>
    <string name="CrearCuenta">Crear cuenta</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Panel</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="valor_de_la_acci_n">Valor de la acción</string>
    <string name="nombre_de_la_acci_n">Nombre de la acción</string>
    <string name="fecha">Fecha</string>
    <string name="cierre">Cierre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_fragmento_registro">FragmentoRegistro</string>
    <string name="prompt_email">Email</string>
    <!--    <string name="prompt_password">Password</string>-->
    <!--    <string name="action_sign_in">Sign in or register</string>-->
    <!--    <string name="action_sign_in_short">Sign in</string>-->
    <string name="welcome">"bien venido!"</string>
    <!--    <string name="invalid_username">Not a valid username</string>-->
    <!--    <string name="invalid_password">Password must be >5 characters</string>-->
    <!--    <string name="login_failed">"Login failed"</string>-->
    <string name="nombre_completo">Nombre completo</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo_electronico">Correo electronico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="cuenta">Cuenta</string>
    <string name="mis_inversiones">Mis inversiones</string>
    <string name="cantidad">Cantidad</string>
    <string name="convertir">Convertir</string>
    <string name="resultado">Resultado:</string>
    <string name="calculadora">calculadora</string>
    <string name="busqeda">Busqeda</string>
    <string name="misiones">Misiones</string>
    <string name="noticias">noticias</string>
    <string-array name="idiomas">
        <item>Español</item>
        <item>Inglés</item>
        <item>Alemán</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->

</resources>