<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/inversiones"
        android:icon="@drawable/baseline_account_balance_wallet_24"
        android:title="@string/mis_inversiones" />

    <item
        android:id="@+id/navigation_noticias"
        android:icon="@drawable/baseline_newspaper_24"
        android:title="@string/noticias" />
    <item
        android:id="@+id/navigation_busqueda"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/busqeda" />

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->
    <item
        android:id="@+id/navigation_calculadora"
        android:icon="@drawable/baseline_calculate_24"
        android:title="@string/calculadora" />

    <item
        android:id="@+id/navigation_Ajustes"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/cuenta" />

</menu>